// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleComponentTest render expanded with content-class-name 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <mock-button
      appearance="transparent"
      aria-expanded="true"
      classname="collapsible"
    >
      <svg
        aria-hidden="true"
        class="collapsible ___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
          fill="currentColor"
        />
      </svg>
      <div>
        Some header
      </div>
    </mock-button>
    <div
      class="content-class-name collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render expanded with content-class-name: Button props 1`] = `
{
  "appearance": "transparent",
  "aria-expanded": true,
  "children": [
    <ChevronDownRegular
      className="collapsible"
    />,
    <div>
      Some header
    </div>,
  ],
  "className": "collapsible",
  "onClick": [Function],
}
`;

exports[`CollapsibleComponentTest render expanded without content-class-name 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <mock-button
      appearance="transparent"
      aria-expanded="true"
      classname="collapsible"
    >
      <svg
        aria-hidden="true"
        class="collapsible ___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
          fill="currentColor"
        />
      </svg>
      <div>
        Some header
      </div>
    </mock-button>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render expanded without content-class-name: Button props 1`] = `
{
  "appearance": "transparent",
  "aria-expanded": true,
  "children": [
    <ChevronDownRegular
      className="collapsible"
    />,
    <div>
      Some header
    </div>,
  ],
  "className": "collapsible",
  "onClick": [Function],
}
`;

exports[`CollapsibleComponentTest render with container-class-name 1`] = `
<DocumentFragment>
  <div
    class="a-container"
  >
    <mock-button
      appearance="transparent"
      aria-expanded="true"
      classname="collapsible"
    >
      <svg
        aria-hidden="true"
        class="collapsible ___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
          fill="currentColor"
        />
      </svg>
      <div>
        Some header
      </div>
    </mock-button>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render with container-class-name: Button props 1`] = `
{
  "appearance": "transparent",
  "aria-expanded": true,
  "children": [
    <ChevronDownRegular
      className="collapsible"
    />,
    <div>
      Some header
    </div>,
  ],
  "className": "collapsible",
  "onClick": [Function],
}
`;

exports[`CollapsibleComponentTest render without container-class-name 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <mock-button
      appearance="transparent"
      aria-expanded="true"
      classname="collapsible"
    >
      <svg
        aria-hidden="true"
        class="collapsible ___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
          fill="currentColor"
        />
      </svg>
      <div>
        Some header
      </div>
    </mock-button>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render without container-class-name: Button props 1`] = `
{
  "appearance": "transparent",
  "aria-expanded": true,
  "children": [
    <ChevronDownRegular
      className="collapsible"
    />,
    <div>
      Some header
    </div>,
  ],
  "className": "collapsible",
  "onClick": [Function],
}
`;

exports[`CollapsibleComponentTest toggle from expanded to collapsed: Button props 1`] = `
{
  "appearance": "transparent",
  "aria-expanded": true,
  "children": [
    <ChevronDownRegular
      className="collapsible"
    />,
    <div>
      Some header
    </div>,
  ],
  "className": "collapsible",
  "onClick": [Function],
}
`;

exports[`CollapsibleComponentTest toggle from expanded to collapsed: Button props 2`] = `
{
  "appearance": "transparent",
  "aria-expanded": true,
  "children": [
    <ChevronDownRegular
      className="collapsible"
    />,
    <div>
      Some header
    </div>,
  ],
  "className": "collapsible",
  "onClick": [Function],
}
`;

exports[`CollapsibleComponentTest toggle from expanded to collapsed: collapsed 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <mock-button
      appearance="transparent"
      aria-expanded="true"
      classname="collapsible"
    >
      <svg
        aria-hidden="true"
        class="collapsible ___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
          fill="currentColor"
        />
      </svg>
      <div>
        Some header
      </div>
    </mock-button>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest toggle from expanded to collapsed: expanded 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <mock-button
      appearance="transparent"
      aria-expanded="true"
      classname="collapsible"
    >
      <svg
        aria-hidden="true"
        class="collapsible ___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
          fill="currentColor"
        />
      </svg>
      <div>
        Some header
      </div>
    </mock-button>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
